--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,42 +1,35 @@
 name: Generate Snake Animation
 
 on:
-  # Run automatically every 24 hours
+  # Run automatically every 6 hours
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 */6 * * *"
   
   # Allow manual trigger
   workflow_dispatch:
   
-  # Run on every push to main
+  # Run on push to main branch
   push:
-    branches:
-    - main
+    branches: [ main, master ]
 
 jobs:
   generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 5
     
     steps:
-      # Checkout the repository
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      # Generate the snake files in ./dist/
-      - name: Generate Snake
+      - name: Generate snake game from github contribution graph
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: auri-ap-cn
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Push the generated files to the output branch
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Push snake game to output branch
+        uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
